#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package PSCalib
#------------------------------------------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-01-23
2014-04-18 Mikhail Dubrovin
- ALL modules: psvn mktxtprop CalibManager/src/*.py - add properties to files
- add src/SvnProps.py
	
Tag: V00-01-22
2014-03-28 Mikhail S. Dubrovin
- add SegmentGeometry.h - abstract class for interface description

Tag: V00-01-21
2014-03-04 Mikhail S. Dubrovin
- in CalibPars (in order to compile in RHEL6) add #include <stdint.h> // for uint8_t, uint16_t etc.
	
Tag: V00-01-20
2014-03-03 Mikhail S. Dubrovin
- add CSPad2x2CalibIntensity and CSPadCalibIntensity to access cspad and cspad2x2 calibration parameters
- add examples in test/ex_cspad2x2_calib_intensity.cpp, test/ex_cspad_calib_intensity.cpp
- modify factory class include/CalibParsStore.h to account for cspad and cspad2x2
	
Tag: V00-01-19
2014-02-08 Mikhail S. Dubrovin
- in PnccdCalibPars, CalibPars, and CalibParsStore include new type of constants PnccdPixelRmsV1
	
Tag: V00-01-18
2014-02-07 Mikhail S. Dubrovin
- cosmetic edition for doxygen documentation
	
Tag: V00-01-17
2014-02-06 Mikhail S. Dubrovin
- in CalibPars.h get all calibration types from pdscalibdata::Pnccd*V1::pars_t

Tag: V00-01-16
2014-02-05 Mikhail S. Dubrovin
- add superclass CalibPars.h
- now PnccdCalibPars is derived from class CalibPars
- add static factory CalibParsStore.h
	
Tag: V00-01-15
2014-01-29 Mikhail S. Dubrovin
- add new class for pnCCD with example: PnccdCalibPars, test/ex_pnccd_calib_pars.cpp
- in CalibFileFinder add parameter print_bits to control verbosity
	
Tag: V00-01-14
2013-12-18 Andy
- forgot to add unit test to svn

Tag: V00-01-13
2013-12-17 Andy