@@ -5,31 +5,15 @@
 // File and Version Information:
 // 	$Id$
 //
-// Description:
-//	Class Exceptions.
-//
+// $Revision$
 //------------------------------------------------------------------------
-
-//-----------------
-// C/C++ Headers --
-//-----------------
 
 //----------------------
 // Base Class Headers --
 //----------------------
 #include "ErrSvc/Issue.h"
 
-//-------------------------------
-// Collaborating Class Headers --
-//-------------------------------
-
-//------------------------------------
-// Collaborating Class Declarations --
-//------------------------------------
-
-//		---------------------
-// 		-- Class Interface --
-//		---------------------
+//----------------------------
 
 namespace PSCalib {
 
